--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <img src="img/logo.png" alt="Logo">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#">lol</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
