--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="javascript/script.js">
-    <title>Document</title>
+    <title>Guide Eletronics</title>
 </head>
 
-<body>
+<body style="height: 200px; width: 300px; overflow-y: scroll;">
     <nav>
         <img src="img/logo.png" alt="Logo">
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">Ab</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <script>
+        function init() {
+            document.getElementById("logo").style.display = "none";
+            document.getElementById("logo").style.display = "none";
+            document.getElementById("logo").style.display = "none";
+        }
+    </script>
 </body>
 
 </html>
