--- a/index.html
+++ b/index.html
@@ -10,16 +10,37 @@
     <title>Guide Eletronics</title>
 </head>
 
-<body style="height: 200px; width: 300px; overflow-y: scroll;">
+<body>
     <nav>
-        <img src="img/logo.png" alt="Logo">
-        <ul>
-            <li><a href="#">lol</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <div class="logo">
+            <img src="img/logo.png" alt="Logo">
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </div>
     </nav>
+    <div class="header-container">
+        <header>
+            <div class="titulo-container">
+                <h1 class="titulo">Sempre conectado</h1>
+                <div class="button-container">
+                    <div class="button">
+                        <a href="#">Saiba mais</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="img-container">
+                <img src="img/principal.png" alt="Principal">
+            </div>
+        </header>
+    </div>
+
     <script>
         function init() {
             document.getElementById("logo").style.display = "none";
