--- a/index.html
+++ b/index.html
@@ -40,6 +40,51 @@
             </div>
         </header>
     </div>
+    <div class="second-page">
+        <div class="test">
+            <div class="texto-h3">
+                <h2><span>Guide Eletronics</span> sua plataforma digital de orientações sobre novas tecnologias</h2>
+            </div>
+            <div class="texto-p">
+                <p>Com tantas opções de eletrônicos disponíveis no mercado, muitas pessoas podem se sentir
+                    sobrecarregadas
+                    ao tentar
+                    decidir qual produto comprar. É por isso que uma ideia de site que poderia ajudar as pessoas a
+                    entender
+                    qual eletrônico
+                    devem comprar seria uma plataforma que fornecesse informações precisas e imparciais sobre os
+                    diferentes
+                    produtos.</p>
+            </div>
+        </div>
+    </div>
+    <div class="third-page">
+        <div class="texto">
+            <div class="titulo">
+                <h2>Qual comprar?</h2>
+            </div>
+            <div class="texto-p">
+                <p>Em nosso website, você encontrará uma barra de pesquisa e seleção intuitiva que facilitará sua
+                    escolha
+                    de qual celular,
+                    computador ou console comprar.</p>
+                <p>Mesmo que você não seja um especialista em tecnologia, nosso site foi projetado para orientá-lo em
+                    sua
+                    decisão de
+                    compra, oferecendo uma ampla seleção de produtos de alta qualidade e as informações necessárias para
+                    tomar a melhor
+                    decisão.</p>
+                <p>Assim, você poderá comprar com confiança e ter a certeza de que está adquirindo
+                    um produto que
+                    atenderá
+                    às suas
+                    necessidades.</p>
+            </div>
+        </div>
+        <div class="img">
+            <img src="img/oqComprar.png" alt="oqComprar">
+        </div>
+    </div>
 
     <script>
         function init() {
