--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="javascript/script.js">
+    <link rel="icon" href="img/redondoicon.jpeg">
     <title>Guide Eletronics</title>
 </head>
 
