adiconando novas paginas

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="second-page">
         <div class="test">
-            <div class="texto-h3">
+            <div class="texto-h2">
                 <h2><span>Guide Eletronics</span> sua plataforma digital de orientações sobre novas tecnologias</h2>
             </div>
             <div class="texto-p">
@@ -62,7 +62,7 @@
     <div class="third-page">
         <div class="texto">
             <div class="titulo">
-                <h2>Qual comprar?</h2>
+                <h3>Qual comprar?</h3>
             </div>
             <div class="texto-p">
                 <p>Em nosso website, você encontrará uma barra de pesquisa e seleção intuitiva que facilitará sua
@@ -84,6 +84,50 @@
         </div>
         <div class="img">
             <img src="img/oqComprar.png" alt="oqComprar">
+        </div>
+    </div>
+    <div class="forth-page">
+        <div class="img">
+            <img src="img/Batman.jpg" alt="batman">
+        </div>
+        <div class="texto">
+            <div class="titulo">
+                <h3>Encontre tudo do produto!</h3>
+            </div>
+            <div class="texto-p">
+                <p>Nós nos preocupamos em oferecer uma experiência completa aos nossos clientes, por isso, além de
+                    oferecer uma seleção de
+                    produtos de qualidade, também fornecemos informações detalhadas sobre o uso dos mesmos.</p>
+                <p>Em nosso site, você encontrará guias completos sobre como configurar, manter e solucionar problemas
+                    comuns relacionados
+                    ao produto adquirido.</p>
+                <p>Nós queremos que você tenha total confiança em seu produto e, por isso, disponibilizamos todo o
+                    suporte necessário para
+                    que você possa desfrutar ao máximo de sua compra.</p>
+            </div>
+        </div>
+    </div>
+    <div class="fifth-page">
+        <div class="texto">
+            <div class="titulo">
+                <h3>FAQ</h3>
+            </div>
+            <div class="texto-p">
+                <p>Uma seção de perguntas frequentes (FAQ) é uma ferramenta muito útil para ajudar nossos clientes a
+                    obter respostas
+                    rápidas às suas dúvidas.
+                </p>
+                <p>É por isso que em nossa plataforma, incluímos uma seção exclusiva de FAQ, que abrange as perguntas
+                    mais comuns que as
+                    pessoas têm sobre o produto.
+                </p>
+                <p>Com essa seção, queremos tornar a experiência do usuário ainda mais agradável e simplificada,
+                    fornecendo todas as
+                    informações necessárias em um só lugar.</p>
+            </div>
+        </div>
+        <div class="img">
+            <img src="img/FAQ.jpg" alt="FAQ">
         </div>
     </div>
 
